--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
         <maven.compiler.parameters>true</maven.compiler.parameters>
         <failOnMissingWebXml>false</failOnMissingWebXml>
 
-        <vaadin.version>22.0.2</vaadin.version>
+        <vaadin.version>22.0.6</vaadin.version>
 
         <quarkus.version>2.5.4.Final</quarkus.version>
     </properties>
@@ -85,11 +85,15 @@
             <groupId>com.vaadin</groupId>
             <artifactId>vaadin-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.vaadin</groupId>
+            <artifactId>vaadin-charts-flow</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>com.vaadin</groupId>
             <artifactId>vaadin-quarkus</artifactId>
-            <version>1.0.0.alpha1</version> <!-- TODO: should come from vaadin-bom -->
+            <version>1.0.0</version> <!-- TODO: should come from vaadin-bom -->
         </dependency>
 
         <dependency>
